--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;800&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+<body class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center" >
+    <main >
+        <section class="home">
+
+        </section>
+        <section class="play-ground"></section>
+        <section class="score"></section>
+    </main>
 </body>
 </html>
