added background size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;800&display=swap" rel="stylesheet">
 </head>
-<body class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center" >
+<body class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center bg-contain" >
     <main >
         <section class="home">
 
