added life line and score

--- a/index.html
+++ b/index.html
@@ -10,15 +10,86 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!--google fonts-->
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;800&display=swap" rel="stylesheet">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@500;600;800&display=swap" rel="stylesheet">
 </head>
-<body class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center bg-contain" >
+<body class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center bg-contain poppins-medium poppins-semibold poppins-extrabold" >
     <main >
-        <section class="home">
-
+        <!--home-->
+        <section class="home min-h-screen  gap-5 text-white flex justify-center items-center flex-col hidden ">
+          <h1 class="anton-regular text-8xl">ALPHABET CLASH</h1>
+          <p class="text-base font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+          <button class="bg-white p-3 font-semibold text-xs rounded text-black">Play Now</button>
         </section>
+        <!--play-ground-->
+        <div class=" flex justify-center items-center flex-col gap-5 py-7">
+            <!--screen-->
+            <!--<div class="flex justify-center flex-cols items-center ">-->
+                <div class="artboard h-24  border-[#010313CC] bg-[#FFFFFFB3]  artboard-horizontal phone-6 border-[14px] rounded-xl ">
+                  <div class="flex justify-center ">
+                    <p class="bg-[#2F2941] text-white text-xs font-medium px-4 pb-2 rounded-b-lg">Don't watch keyboard  while playing...</p>
+                  </div>
+                  <div class="flex justify-center items-center h-full">
+                    <p class="text-black text-9xl font-medium">Y</p>
+                  </div>
+                </div>
+           <!-- </div>-->
+            <!--key board-->
+            <div>
+                <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd class="kbd">q</kbd>
+                    <kbd class="kbd">w</kbd>
+                    <kbd class="kbd">e</kbd>
+                    <kbd class="kbd">r</kbd>
+                    <kbd class="kbd">t</kbd>
+                    <kbd class="kbd">y</kbd>
+                    <kbd class="kbd">u</kbd>
+                    <kbd class="kbd">i</kbd>
+                    <kbd class="kbd">o</kbd>
+                    <kbd class="kbd">p</kbd>
+                  </div>
+                  <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd class="kbd">a</kbd>
+                    <kbd class="kbd">s</kbd>
+                    <kbd class="kbd">d</kbd>
+                    <kbd class="kbd">f</kbd>
+                    <kbd class="kbd">g</kbd>
+                    <kbd class="kbd">h</kbd>
+                    <kbd class="kbd">j</kbd>
+                    <kbd class="kbd">k</kbd>
+                    <kbd class="kbd">l</kbd>
+                  </div>
+                  <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd class="kbd">z</kbd>
+                    <kbd class="kbd">x</kbd>
+                    <kbd class="kbd">c</kbd>
+                    <kbd class="kbd">v</kbd>
+                    <kbd class="kbd">b</kbd>
+                    <kbd class="kbd">n</kbd>
+                    <kbd class="kbd">m</kbd>
+                    <kbd class="kbd">/</kbd>
+                  </div>
+            </div>
+            <!--life line-->
+            <div class=" flex  w-5/6 text-white justify-between text-base font-light px-28">
+             
+              <button class="btn  bg-[#894189] font-thin border-none  text-white text-lg rounded-3xl gap-2 p-">
+                Life
+                <img src="images/Group 23.svg" alt="">
+                <span>1</span>                 
+              </button>
+             
+            <button class="btn bg-[#360490] font-thin border-none text-white text-lg rounded-3xl">
+               Score
+               <img src="images/monetization_on.svg" alt="">
+               <span>1</span>
+            </button>
+          </div>
+        </div>
         <section class="play-ground"></section>
         <section class="score"></section>
     </main>
