--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
            <!-- </div>-->
             <!--key board-->
-            <div id="keyboard">
+            <div >
                 <div  class="my-1 flex w-full justify-center gap-1">
                     <kbd id="q" class="kbd">q</kbd>
                     <kbd id="w" class="kbd">w</kbd>
