--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
             </div>
             <!--life line-->
             <div class=" flex  w-5/6 text-white justify-between text-base font-light px-8">
-             
+             <!--display life-->
               <button class="btn  bg-[#894189] font-thin border-none  text-white text-lg rounded-3xl gap-2 p-">
                 Life
                 <img src="images/Group 23.svg" alt="">
-                <span>1</span>                 
+                <span id="currant-life">5</span>                 
               </button>
-             
-            <button class="btn bg-[#360490] font-thin border-none text-white text-lg rounded-3xl">
+             <!--display score-->
+            <button class="btn bg-[#360490] font-thin border-none text-white text-lg rounded-3xl ">
                Score
                <img src="images/monetization_on.svg" alt="">
-               <span>1</span>
+               <span id="currant-score">0</span>
             </button>
           </div>
         </section>
         <!--score-->
-        <section class="hidden score  flex justify-center ">
+        <section id="final-score" class="hidden   flex justify-center   min-h-screen    items-center flex-col gap-5  py-52 pb-96  ">
           <div class="text-white  bg-[#FFFFFF33] rounded-lg  flex justify-center items-center  flex-col gap-3 p-5">
             <h1 class="text-5xl">
               <span class="font-semibold">Score :</span>
-              <span class="font-thin">14</span>
+              <span id="final-score-last" class="font-thin">14</span>
             </h1>
-            <button class="bg-white text-black text-xl px-4 py-2 rounded-lg font-semibold">Play Now</button>
+            <button onclick="play()" class="bg-white text-black text-xl px-4 py-2 rounded-lg font-semibold">Play Now</button>
             <p class="text-sm font-light ">Practice will make you Pro</p>
           </div>
         </section>
